Fixing UI weirdness for date selector on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 .Toastify__toast {
   font-family: 'Raleway';
 }
+
+.MuiPickersToolbar-root {
+  background-color: transparent;
+}
